apps/infra/k8s/zookeeper.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: zookeeper
  namespace: hr-system
spec:
  serviceName: zookeeper
  replicas: 1
  selector:
    matchLabels:
      app: zookeeper
  template:
    metadata:
      labels:
        app: zookeeper
    spec:
      containers:
        - name: zookeeper
          image: confluentinc/cp-zookeeper:7.9.0
          ports:
            - containerPort: 2181
          volumeMounts:
            - name: zk-data
              mountPath: /var/lib/zookeeper
  volumeClaimTemplates:
    - metadata:
        name: zk-data
      spec:
        accessModes: ["ReadWriteOnce"]
        resources:
          requests:
            storage: 5Gi
