apps/infra/k8s/hr-backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hr-backend
  namespace: hr-system
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hr-backend
  template:
    metadata:
      labels:
        app: hr-backend
    spec:
      containers:
        - name: hr-backend
          image: 850995576970.dkr.ecr.ap-northeast-2.amazonaws.com/hradar-core:34109abe2d8d3340f17438787e654a2c84c3cbef
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: hr-backend
  namespace: hr-system
spec:
  type: NodePort
  selector:
    app: hr-backend
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8080
    - name: https
      protocol: TCP
      port: 443
      targetPort: 8080
