apps/infra/k8s/hr-chatbot.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hr-chatbot
  namespace: hr-system
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hr-chatbot
  template:
    metadata:
      labels:
        app: hr-chatbot
    spec:
      containers:
        - name: hr-chatbot
          image: 850995576970.dkr.ecr.ap-northeast-2.amazonaws.com/hradar-chatbot:697b4a5158c67e1922641408b672cfbec2d0164e
          ports:
            - containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: hr-chatbot
  namespace: hr-system
spec:
  type: NodePort
  selector:
    app: hr-chatbot
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8000
    - name: https
      protocol: TCP
      port: 443
      targetPort: 8000
