apps/infra/k8s/kafka.yaml
apiVersion: v1
kind: Service
metadata:
  name: kafka-headless
  namespace: hr-system
  labels:
    app: kafka
spec:
  ports:
    - port: 9092
      name: plaintext
  clusterIP: None
  selector:
    app: kafka
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: kafka
  namespace: hr-system
spec:
  selector:
    matchLabels:
      app: kafka
  serviceName: kafka-headless
  replicas: 1 # For dev/test, can increase for prod
  template:
    metadata:
      labels:
        app: kafka
    spec:
      securityContext:
        fsGroup: 1000
      containers:
        - name: kafka
          image: confluentinc/cp-kafka:7.9.0
          ports:
            - containerPort: 9092
          volumeMounts:
            - name: kafka-data
              mountPath: /var/lib/kafka/data
  volumeClaimTemplates:
    - metadata:
        name: kafka-data
      spec:
        accessModes: [ "ReadWriteOnce" ]
        resources:
          requests:
            storage: 10Gi
