apps/infra/k8s/zookeeper-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: zookeeper
  namespace: hr-system
spec:
  selector:
    app: zookeeper
  ports:
    - name: client
      port: 2181
      targetPort: 2181
